2007-10-15  Brian Cameron  <brian.cameron@sun.com>

	* mixer/applet.c: Update fallback cb_check function
	  so that it only checks for volume change every 1.5
	  seconds, so it does not consume resources so heavily.
	  Upon noticing a change, it will update ten times per
	  second for 10 seconds after the last change, so the
	  mixer updates nicely while the volume is being 
	  changed.  Fixes enhancement request #486111.

2007-09-16  Callum McKenzie  <callum@spooky-possum.org>

	* configure.in: 
	* NEWS: release 2.20.0

2007-09-03  Callum McKenzie  <callum@spooky-possum.org>

	* configure.in: 
	* NEWS: release 2.19.91

2007-09-01  Callum McKenzie  <callum@spooky-possum.org>

	* MAINTAINERS: Updated to the new format.

2007-08-01  Callum McKenzie  <callum@spooky-possum.org>

	* configure.in: 
	* NEWS: release 2.19.1

2007-07-30  Callum McKenzie  <callum@spooky-possum.org>

	* configure.in: 
	* NEWS: release 2.19.0

2007-07-17  Jaap Haitsma <jaap@haitsma.org>

	* configure.in: set minimum requirements for glib to 2.13.0 and for
	gtk+ to 2.11.0 in order to use new tooltip API of gtk 2.12

2007-03-12  Davyd Madeley  <davyd@madeley.id.au>

	* configure.in:
	* NEWS: release 2.18.0

2007-03-11  Christian Kirbach  <Christian.Kirbach@googlemail.com>

        * invest-applet/data/invest-chart.desktop.in:
	"Application" is not a valid category in the freedesktop.org
        specification.

2007-02-26  Davyd Madeley  <davyd@madeley.id.au>

	* configure.in:
	* NEWS: release 2.17.90

2007-02-20  Kjartan Maraas  <kmaraas@gnome.org>

	* Makefile.am: Dist MAINTAINERS.

2007-01-26  Alexander Shopov  <ash@contact.bg>

	* charpick/help/bg/bg.po:
	* charpick/help/bg/figures/charpick-preferences.png:
	Updated Bulgarian translation by
	Yavor Doganov <yavor@doganov.org>

2007-01-25  David Lodge <dave@cirt.net>

	* gswitchit/docs/en_GB/en_GB.po: Added English (British) translation
	* gswitchit/docs/Makefile.am: Added en_GB to DOC_LINGUAS

2007-01-25  David Lodge <dave@cirt.net>
