@@ -1,5 +1,7 @@
 2007-11-04  Callum McKenzie  <callum@spooky-possum.org>
 
+	* gweather-pref.c: Remove an unneeded #include of langinfo.h.
+
 	* Locations.xml.in: Added forecast zone for West Plains,
 	Missouri. Thanks to Michael Crider (Bug #453539). In addition,
 	best-estimates of the appropriate zones for most other Missouri
