@@ -1,3 +1,9 @@
+2007-11-04  Callum McKenzie  <callum@spooky-possum.org>
+
+	* configure.in: New test for langinfo.h and the nl_langinfo
+	function. The previous mechanism for determining its presence was
+	incorrect. Patch from Matthias Clasen (Bug #491438).
+
 2007-10-15  Brian Cameron  <brian.cameron@sun.com>
 
 	* mixer/applet.c: Update fallback cb_check function
